// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Be able to parse current payload: Old infra output for message "test" 1`] = `
Object {
  "author": Ok(Some(ProfileIdentifier {
    "network": "facebook.com",
    "userId": "100027562249574",
  })),
  "authorPublicKey": Ok(Some(Object {
    "algr": 2,
    "key": CryptoKey { [opaque crypto key material] },
  })),
  "encrypted": Ok(Uint8Array [ 3a0d6ee692c6f46896b196f14301c01ad2fa26aa ]),
  "encryption": Ok(Object {
    "AESKey": Ok(Object {
      "algr": "A256GCM",
      "key": CryptoKey { [opaque crypto key material] },
    }),
    "iv": Ok(Uint8Array [ 0633db7e24805c2bdcff69ea2afda7cd ]),
    "type": "public",
  }),
  "signature": Ok(None),
  "version": -38,
}
`;

exports[`Generate v38 payload: Generated -38 message 1`] = `"🎼4/4|avkwBKqMpCKznGclvChuuh2AEExV0J14xI/KANhwiKJfVyfm2ObWb432E3aAOa7ImRoCd7/JK1dDQWk4rt9NqajTEaajARMc9hJ9GmR8lorBNRNHlgj/h1KJYk5th7Nsr04PWO0nJUKiDH2CJwieSxW2YqxCI1ceYKUYcZOsVJEZOrJ/IB8WUmU0|BjPbfiSAXCvc/2nqKv2nzQ==|Og1u5pLG9GiWsZbxQwHAGtL6Jqo=|_|Aq/bVWAKvodJuURGk3enjE1gUiu2SELM8IIKIlNGqOWM|1|ZmFjZWJvb2suY29tL3Rlc3Q=:||"`;

exports[`Generate v38 payload: Parse generated -38 message 1`] = `
Ok(Object {
  "author": Ok(Some(ProfileIdentifier {
    "network": "facebook.com",
    "userId": "test",
  })),
  "authorPublicKey": Ok(Some(Object {
    "algr": 2,
    "key": CryptoKey { [opaque crypto key material] },
  })),
  "encrypted": Ok(Uint8Array [ 3a0d6ee692c6f46896b196f14301c01ad2fa26aa ]),
  "encryption": Ok(Object {
    "AESKey": Ok(Object {
      "algr": "A256GCM",
      "key": CryptoKey { [opaque crypto key material] },
    }),
    "iv": Ok(Uint8Array [ 0633db7e24805c2bdcff69ea2afda7cd ]),
    "type": "public",
  }),
  "signature": Ok(None),
  "version": -38,
})
`;
